--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		</style>
 	</head>
 	<body>
-		<h1>1o1o is working !</h1>
+		<h1>1o1o is working...</h1>
 		<p class="type-text" title="Why ~2at^1000 are you looking for ?;Sorry i'm busy,~5very busy,\n^1000 Please, come back later !">:)</p>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 		<script src="jquery.teletype.min.js"></script>
